force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Delete_Responses_On_Submission__c.field-meta.xml
<CustomField>
    <fullName>redwing__Delete_Responses_On_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Delete quiz response records after quiz submission</inlineHelpText>
    <label>Delete Responses on Submission</label>
    <type>Checkbox</type>
</CustomField>