force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Display_Correct_Answers__c.field-meta.xml
<CustomField>
    <fullName>redwing__Display_Correct_Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, user will see the correct answer options after submitting a quiz</inlineHelpText>
    <label>Display Correct Answers</label>
    <type>Checkbox</type>
</CustomField>