force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Display_Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>redwing__Display_Progress_Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, progress bar will be displayed for end users when taking a quiz</inlineHelpText>
    <label>Display Progress Bar</label>
    <type>Checkbox</type>
</CustomField>