force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Display_Quiz_Navigator__c.field-meta.xml
<CustomField>
    <fullName>redwing__Display_Quiz_Navigator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users will have access to a navigator when taking a quiz</inlineHelpText>
    <label>Display Quiz Navigator</label>
    <type>Checkbox</type>
</CustomField>