force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Display_Retake_Quiz_Button__c.field-meta.xml
<CustomField>
    <fullName>redwing__Display_Retake_Quiz_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, user will be able to retake a failed quiz</inlineHelpText>
    <label>Display Retake Quiz Button</label>
    <type>Checkbox</type>
</CustomField>