force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Display_Topics_Summary__c.field-meta.xml
<CustomField>
    <fullName>redwing__Display_Topics_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Display a summary on quiz submission that shows correct/incorrect topics</inlineHelpText>
    <label>Display Topics Summary</label>
    <type>Checkbox</type>
</CustomField>