force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Enable_Survey_Mode__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Survey_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling Survey Mode prevents deleting responses on completion and scoring is disabled</inlineHelpText>
    <label>Survey Mode</label>
    <type>Checkbox</type>
</CustomField>