force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>redwing__Passing_Score__c</fullName>
    <inlineHelpText>Number between 0 and 100 that will determine the minimum percentage of correct answers to get a passing score</inlineHelpText>
    <label>Passing Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>