force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Randomize__c.field-meta.xml
<CustomField>
    <fullName>redwing__Randomize__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, questions will be randomized for end users</inlineHelpText>
    <label>Randomize Questions</label>
    <type>Checkbox</type>
</CustomField>