force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Randomize_Question_Lines__c.field-meta.xml
<CustomField>
    <fullName>redwing__Randomize_Question_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, quiz pages will be randomized for end users</inlineHelpText>
    <label>Randomize Quiz Pages</label>
    <type>Checkbox</type>
</CustomField>