force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Require_All_Questions_For_Submission__c.field-meta.xml
<CustomField>
    <fullName>redwing__Require_All_Questions_For_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users will be required to answer all questions in order to submit the quiz</inlineHelpText>
    <label>Require All Questions for Submission</label>
    <type>Checkbox</type>
</CustomField>