force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Round_Score__c.field-meta.xml
<CustomField>
    <fullName>redwing__Round_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, user&apos;s score will be rounded to the nearest integer</inlineHelpText>
    <label>Round Score</label>
    <type>Checkbox</type>
</CustomField>