force-app/main/default/objects/redwing__Quiz__c/fields/redwing__Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Questions__c</fullName>
    <label>Total Questions</label>
    <summarizedField>redwing__Question_Line__c.redwing__Total_Questions__c</summarizedField>
    <summaryForeignKey>redwing__Question_Line__c.redwing__Quiz__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>