force-app/main/default/objects/redwing__Quiz__c/validationRules/redwing__Checking_Positive_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Checking_Positive_Number</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(redwing__Max_Attempts__c) &amp;&amp; redwing__Max_Attempts__c &lt; 1</errorConditionFormula>
    <errorDisplayField>redwing__Max_Attempts__c</errorDisplayField>
    <errorMessage>Number of attempts must be greater than zero</errorMessage>
</ValidationRule>